# semio

./: .gitignore  .gitlab-ci.yml  README.md  app.py  docker-compose.yml  requirements.txt  test_semgrep.json
.github/workflows/: ci.yml  semio-security.yml
backend/: .env  .env.example  ACCOUNT_MANAGEMENT_GUIDE.md  ADMIN_KEY_MANAGEMENT.md  AGENTIC_AI_IMPLEMENTATION_GUIDE.md  AWS_ADMIN_GUIDE.md  AWS_CONSOLE_DEPLOYMENT_GUIDE.md  AWS_DASHBOARD_CONFIG.md  AWS_DEPLOYMENT_GUIDE.md  DEPLOYMENT_MANAGEMENT.md  ENVIRONMENT_VARIABLES.md  GITLAB_INTEGRATION_README.md  GITLAB_PIPELINE_ISSUES_AND_FIXES.md  MANUAL_AWS_DEPLOYMENT.md  PRODUCTION_TESTING_CHECKLIST.md  Procfile  QUICK_START_GUIDE.md  admin_key_manager.py  alembic.ini  api_key_manager.py  demo_api_key_usage.py  gitlab-ci-corrected.yml  gitlab-ci-example.yml  requirements-dev.txt  requirements-prod.txt  requirements.txt  run_production_tests.py  semio.db  semio_cli.py  semio_output_html.html  semio_output_markdown.markdown  setup_database.md  test_endpoint_differences.py  test_gitlab_integration.py  test_semgrep_data.json  test_semio_api.py  web_admin_interface.py
backend/.ebextensions/: 01_single_instance.config  02_custom_domain.config  03_admin_interface.config  (+3 more)
cli/: pyproject.toml
cli/semio_cli/: main.py
demo/: ci-integration-demo.md  setup-demo.sh  test_vulnerable_code.py
demo-repos/: README.md  setup-demos.bat  setup-demos.sh
semio-demo-github/: .gitignore
semio-demo-gitlab/: .gitlab-ci.yml  Dockerfile  README.md  app.py
source/: pyvenv.cfg
website/: README.md  index.html  script.js  styles.css
(+43 files in other folders)
